Changelog
=========

3.1.4 (unreleased)
------------------

- Nothing changed yet.


3.1.3 (2014-02-06)
------------------

- Remove remaining traces of `related_items` index.
  Backport of 9d1064d.
  [lgraf]

- Dossier resolving: Fixed `its_all_closed` check, for nested subtasks.
  [phgross]

- Document tooltip helper: Fixed link for the icon.
  [phgross]

- Fixed load order issue when setting tagged values to omit the changeNote
  field from the IVersionable behavior.
  Backport of d8438c8.
  [lgraf]

- OGDS Updater: Gracefully skip users outside users_base referenced in groups.
  Backport of 2d862bd.
  [lgraf]

- Removed related_items index and RelatedTasks tab.
  [lknoepfel]


3.1.2 (2013-12-02)
------------------

- Issued inbox task: fixed listing query, to search the complete client.
  [phgross]

- Inbox overview: List only active tasks and forwardings.
  [phgross]

- Inbox overview: Only list current part of a predecessor/successor couple.
  [phgross]


3.1.1 (2013-10-23)
------------------

- Fixed CleanupReferencePrefixMapping upgradestep
  (works now for reference to no longer existing objects):
  [phgross]


3.1 (2013-10-23)
----------------

- Update reference prefix manager to the new version of adapters.
  [lknoepfel]

- Fixed client setup: use system user instead of hardcoded username.
  [lknoepfel]

- Fixed redirect when creating a subtask.
  [phgross]

- Integrate ftw.zipexport.
  [lknoepfel]

- Reworked forwarding refuse and reassign functionality.
  [phgross]

- Reworked inbox tabs.
  [phgross]

- Activate reporting actions (dossier and tasks) for every user.
  [phgross]

- Dossiercover: Implements breadcrumb cropping and adjust fonz size.
  [phgross]

- Dropped inbox_group agency for tasks in a oneclient setup.
  [phgross]

- Task workflow: Documents inside a task, aren't editable when the dossier is closed.
  [phgross]

- Reworked document_author resolution and displaying value in listings.
  [phgross]
