@@ -4,7 +4,8 @@ Changelog
 3.1.4 (unreleased)
 ------------------
 
-- Nothing changed yet.
+- Removed DocuComposer actions from opengever.dossier:default profile.
+  [lgraf]
 
 
 3.1.3 (2014-02-06)
